--- a/wikipedia-page/style.css
+++ b/wikipedia-page/style.css
@@ -143,7 +143,6 @@ td {
   padding-left: 10px;
   font-size: 13px;
   line-height: 17px;
-  font-weight: 50;
 }
 
 .enumeracion {
@@ -225,4 +224,22 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+.lista-ref {
+  -moz-column-count: 2;
+  -webkit-column-count: 2;
+  column-count: 2;
+  list-style-type: decimal;
+  width: 1100px;
+}
+
+.references {
+  margin: 0.3em 0 0 0.2em;
+}
+
+.descripcion-notas,
+.references {
+  font-size: 13px;
+  line-height: 16px;
 }
