--- a/wikipedia-page/style.css
+++ b/wikipedia-page/style.css
@@ -244,3 +244,22 @@ a:hover {
   font-size: 13px;
   line-height: 16px;
 }
+
+#autoridades {
+  border: 1px solid #aaa;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 20px;
+  padding: 2px;
+}
+
+#head {
+  background-color: #ddddff;
+  width: 15%;
+  color: #0645ad;
+  text-align: center;
+}
+
+.item-aut {
+  display: inline;
+}
