--- a/style.css
+++ b/style.css
@@ -1,35 +1,35 @@
-body {
+:root {
   background-color: whitesmoke;
 }
 
 #title {
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
   margin-top: 100px;
 }
 
-.button {
+.btn {
+  width: 15rem;
   background-color: blueviolet;
-  border-radius: 15px;
-  height: 50px;
-  width: 200px;
-  text-align: center;
-  margin: auto;
-}
-
-h2 {
+  border-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  color: white;
-  padding-top: 12px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  margin: 1rem;
+  padding: 1rem;
+  text-decoration: none;
 }
 
-.button:hover {
+.btn:hover {
   background-color: rgb(255, 132, 0);
   cursor: pointer;
 }
 
-a {
-  text-decoration: inherit;
-  color: inherit;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
