--- a/survey-form/index.css
+++ b/survey-form/index.css
@@ -9,7 +9,7 @@ body {
   background-size: cover; 
   background-repeat: no-repeat;
   background-attachment: fixed;
-  margin-bottom: 5em;
+  margin-bottom: 0;
   font-family: 'Montserrat', sans-serif;
   color:white;
 }
@@ -34,16 +34,25 @@ body {
 #survey-form {
   width: 55%;
   margin: 0 auto;
+  padding-bottom: 4em;
   background-color: rgba(0, 0, 0, 0.624);
-  border-radius: 0.5em;
+  border-radius: 0.4em;
 }
 
-fieldset {
-  padding-top: 5%;
-  padding-bottom: 5%;
+.fieldset-blanks, .fieldset-radio, .fieldset-checkbox{
+  padding-bottom: 0;
   padding-left: 5%;
   padding-right: 8%;
   border: 0;
+}
+
+.fieldset-blanks {
+  padding-top: 5%;
+}
+
+.fieldset-radio, .fieldset-checkbox{
+  padding-top: 2%;
+  font-weight: bold;
 }
 
 .fields {
@@ -54,12 +63,46 @@ fieldset {
   color: rgb(148, 144, 144);
 }
 
-input {
+.input-field, select {
   font-size: 1.05em;
-  padding-left: 1em;
   margin-top: 1em;
-  width: 100%;
   height: 2.2em;
   border-radius: 0.2em;
   border: none;
+}
+
+.input-field {
+  padding-left: 1em;
+  width: 100%;
+}
+
+select {
+  padding-left: 0.7em;
+  background-color: white;
+  width: 104%;
+}
+
+.radio-option, .checkbox-option {
+  margin-bottom: 0em;
+  margin-top: 0.5em;
+}
+
+#comments {
+  margin-top: 1.5em;
+  padding: 1em;
+  width: 95%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.9em;
+  font-weight: 900;
+}
+
+button {
+  margin: auto;
+  display: block;
+  width: 91%;
+  height: 3em;
+  background-color: #37af65;
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
